# PolycodeTemplate_CMake

./: .gitignore  README.md
PolycodeTemplate/: CMakeLists.txt  PolycodeTemplateEntryPoint.cpp
cmake/: FindPolycode.cmake
